--- a/doc/cie/logic.tex
+++ b/doc/cie/logic.tex
@@ -13,35 +13,29 @@ given theory.
 
 The simplest theory $\ith$ is a list of \emph{theory element}\/s
 $\ite_1 \ldots \ite_n$. A theory element may specify that a certain
-set, set element, proposition or predicate, or model must exist (i.e.,
-\textsf{Parameter} specifications). It may also provide a definition
-of a set, term, proposition, predicate, or theory (i.e.,
-\textsf{Definition} specifications). Finally, a theory element can be
-a named axiom that must hold. (i.e., \textsf{Axiom} specifications).
+set, set element, proposition or predicate, or model must exist (using
+the 
+\textsf{Parameter} keyword). It may also provide a definition
+of a set, term, proposition, predicate, or theory (using the 
+\textsf{Definition} keyword). Finally, a theory element can be
+a named axiom (using the \textsf{Axiom} keyword).
 
-A theory may be parametrized by models of another theory,
-$\ilambda{\iM}{\ith_1}{\ith_2}$. A typical example in mathematics is
-the theory of a vector space, parameterized by a field of scalars. In
-Figure~\ref{fig:kuratowski}, \texttt{K} is a theory parameterized by a
-model choosing an implementation of a single set. For any such
-model~$\im$, then, $\mathtt{K}(\im)$ is a theory describing a model of
-finite sets whose elements are in the set $\iselect{\im}{\mathtt{a}}$.
-
-A theory may also describe a uniform family of models
-$\idarrow{\im}{\ith_1}{\ith_2}$, i.e., a single implementation of a
-mapping (in OCaml such mappings are called \emph{functors}) that takes
-a model~$\im$ satisfying~$\ith_1$ to a model of~$\ith_2$. In contrast,
-a parameterized theory $T = \ilambda{\iM}{\ith_1}{\ith_2}$ permits
-completely unrelated implementations for $T(\im_1)$ and $T(\im_2)$. An
-example of a uniform family of models would be a mapping from fields
-to vectors spaces that maps a field~$F$ to the 1-dimensional vector
-space over~$F$.
-
-\internal{Andrej}{I wanted to clarify the previous two paragraphs a
-  bit, but I am not sure it's an improvement. Please improve some
-  more. At some point we should say that both, parameterized theories
-  and uniform families get translated to functor signatures. But where
-  is the best place for that?}
+We allow model parameters in theories; 
+typical examples in mathematics include
+the theory of a vector space parameterized by a field of scalars,
+or the theory of the real numbers parameterized by a model of the
+natural numbers.
+Following Sannella, Sokolowski, and 
+Tarlecki\footnote{``parameterized (program specification) $\not=$ (parameterized pro- 
+gram) specification''}~\cite{sannella+:92} RZ supports two forms of parameterization.  A theory of a parameterized implementation
+$\idarrow{\im}{\ith_1}{\ith_2}$ describes a uniform family of models (i.e.,
+a single implementation; a functor in OCaml) that maps every
+model~$\im$ satisfying~$\ith_1$ to a model of~$\ith_2$.  In contrast,
+a theory $\ilambda{\iM}{\ith_1}{\ith_2}$
+maps models to theories; if $\iTH$ is such a theory, then
+$\iTH(\im_1)$ and $\iTH(\im_2)$ are theories whose implementations might be completely unrelated.\footnote{
+Further, in some cases $\iTH(\im_1)$ might be implementable while $\iTH(\im_2)$ is not.
+}
 
 \begin{figure}
 	\[
