--- a/doc/cie/translation.tex
+++ b/doc/cie/translation.tex
@@ -263,9 +263,9 @@ realizers.
 %
 Russell's definite description operator $\ithe{x}{s}{\phi(x)}$ denotes
 the unique element of $\isubset{x}{s}{\phi(x)}$. In case such an~$x$
-does not exists, or if there are several, the term is not well formed.
+does not exist, or if there are several, the term is not well formed.
 The RZ translation essentially just asks the programmer to provide a
-suitable realizer $(x,b)$,
+suitable realizer $b$ for uniqueness,
 %
 \begin{equation*}
   \ooblig{x{:}s,b}{\typeOf{\phi}}{
