--- a/doc/cie/cie.tex
+++ b/doc/cie/cie.tex
@@ -35,7 +35,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{document}
-\title{RZ (Working title)}
+\title{We need a good title}
 \author{
   Andrej Bauer\inst{1} \and
   Christopher A. Stone\inst{2}}
