--- a/doc/cie/rzbib.bib
+++ b/doc/cie/rzbib.bib
@@ -323,3 +323,37 @@ KEY="Peyton Jones"}
   year = 	 1975
 }
 
+@misc{yap06:_theor_real_comput_egc,
+ title="Theory of Real Computation according to {EGC}",
+ author="Chee K. Yap",
+ note="To appear in LNCS Volume based on the
+   Dagstuhl Seminar ``Reliable Implementation of Real Number
+   Algorithms: Theory and Practice'', Jan 8-13, 2006.",
+ year=2006
+}
+
+@Book{aho74:_desig_analy_comput_algor,
+  author =	 {A. V. Aho and J. E. Hopcroft and J. D. Ullman},
+  title = 	 {The Design and Analysis of Computer Algorithms},
+  publisher = 	 {Addison-Wesley},
+  year = 	 1974,
+  address =	 {Reading, Massachusetts}
+}
+
+@Book{blum98:_compl_real_comput,
+  author =	 {L. Blum and F. Cucker and M. Shub and S. Smale},
+  title = 	 {Complexity and Real Computation},
+  publisher = 	 {Springer-Verlag},
+  year = 	 1998,
+  address =	 {New York}
+}
+
+@Book{Bishop:Bridges:85,
+  author =	 {E. Bishop and D. Bridges},
+  title =	 {Constructive Analysis},
+  year =	 {1985},
+  publisher =    {Springer-Verlag},
+  volume =       {279},
+  series =       {Grundlehren der math. Wissenschaften}
+}
+
