--- a/doc/cie/modest_sets.tex
+++ b/doc/cie/modest_sets.tex
@@ -521,7 +521,7 @@ theory in the category of modest sets.
 As an example of a uniform family we consider the cyclic group
 $(\ZZ_n, 0, {-}, {+})$ of order~$n$. To keep things simple, we assume
 that~$n$ ranges over natural numbers that can be represented by
-type~$\cint$ (i.e., $\typoeOf{N}=\cint$), and that 
+type~$\cint$ (i.e., $\typeOf{N}=\cint$), and that 
 $v \rz_N n \iff v = n$.
 %
 The uniform family $\family{Z_n}{n \in N}$ is then like the cyclic group of order~$7$, with $7$ replaced by~$n$:
